--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
-xcode_project: AVFeedbackDemo.xcodeproj
+xcode_project: AVFeedbackDemo/AVFeedbackDemo.xcodeproj
 xcode_scheme: AVFeedbackDemoTests
